--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 
     <div class="section about" id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm a passionate B.Tech student specializing in XYZ. I have a keen interest in [insert interests here, e.g., web development, data science]. My goal is to leverage technology to solve real-world problems.</p>
+        <p>Hello! I'm a passionate B.Tech student specializing in AI&ML. I have a keen interest in [insert interests here, e.g., Machine learning data science]. My goal is to leverage technology to solve real-world problems.</p>
     </div>
 
     <div class="section skills" id="skills">
         <h2>Skills</h2>
         <ul>
-            <li>Programming Languages: C, C++, Java, Python</li>
-            <li>Web Development: HTML, CSS, JavaScript, React</li>
-            <li>Database Management: MySQL, MongoDB</li>
+            <li>Programming Languages: C,Python</li>
+            <li>Web Development: HTML</li>
+            <li>Database Management: MySQL</li>
             <li>Tools: Git, VS Code</li>
         </ul>
     </div>
@@ -150,7 +150,7 @@
     <div class="section projects" id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Project 1:</strong> <a href="../sravani/index.html" target="_blank">Student Marks Management</a> - A brief description of your project and what you accomplished.</li>
+            <li><strong>Project 1:</strong> <a href="../mounika/index.html" target="_blank">Student Marks Management</a> - A brief description of your project and what you accomplished.</li>
             <li><strong>Project 2:</strong> [Project Name] - A brief description of your project and what you accomplished.</li>
             <li><strong>Project 3:</strong> [Project Name] - A brief description of your project and what you accomplished.</li>
         </ul>
@@ -158,13 +158,13 @@
 
     <div class="section contact" id="contact">
         <h2>Contact</h2>
-        <p>Email: yourname@example.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+        <p>Email: pusarlamounika0@gmail.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/mounika" target="_blank">linkedin.com/in/yourprofile</a></p>
+        <p>GitHub: <a href="https://github.com/pusarlamounika0@gmail.com;" target="_blank">github.com/yourusername</a></p>
     </div>
 
     <footer>
-        <p>&copy; 2024 mounika. All rights reserved.</p>
+        <p>&copy; 2025 mounika. All rights reserved.</p>
     </footer>
 </body>
 </html>
